# nix-query-tree-viewer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  default.nix  flake.nix  shell.nix
.github/workflows/: test.yml
.nix/: nixops.nix
glade/: ui.glade
nix/: default.nix  overlay.nix
src/: lib.rs  main.rs  nix_query_tree.rs  opts.rs  tree.rs  ui.rs
src/nix_query_tree/: exec_nix_store.rs  parsing.rs
src/ui/: builder.rs  css.rs  menu.rs  prelude.rs  stack.rs  state.rs  statusbar.rs  switcher.rs  toolbar.rs
src/ui/stack/: raw.rs  tree.rs
src/ui/stack/tree/: column.rs  columns.rs  path.rs  signals.rs  store.rs
src/ui/switcher/: raw.rs
style/: style.css
tests/: parsing.rs
