[package]
name = "nix-query-tree-viewer"
version = "0.1.0"
authors = ["illabout"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ego-tree = "0.6.2"
glib = "0.9.1"
gio = "0.8.0"
gtk = "0.8.0"
nom = "5.1.0"

[dev-dependencies]
indoc = "0.3.4"


