[package]
name = "nix-query-tree-viewer"
version = "0.1.0"
authors = ["cdepillabout@gmail.com"]
edition = "2018"
description = "A GTK viewer for `nix-store --query --tree` output"
license = "MIT"
repository = "https://github.com/cdepillabout/nix-query-tree-viewer"
readme = "README.md"
keywords = ["gtk", "nix", "nix-store", "gui"]
categories = ["gui"]

[dependencies]
gdk = "0.12.0"
gio = "0.8.0"
glib = "0.9.1"
glib-sys = "0.9.1"
gtk-sys = "0.9.2"
nom = "5.1.0"
pango = "0.8.0"
structopt = "0.3.9"

[dependencies.gtk]
version = "0.8.0"
features = ["v3_22"]

[dev-dependencies]
indoc = "0.3.4"
